--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
   <groupId>net.latombe</groupId>
   <artifactId>testing-gitflow</artifactId>
-  <version>1.0-myprecious-SNAPSHOT</version>
+  <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>testing-gitflow</name>
