Squashed commit of the following:
commit ad8e8e3168a01b48b8c23dc605322168aea7e15a
Author: Vincent Latombe <vincent@latombe.net>
Date:   Thu Jul 18 06:51:31 2013 +0200

	updating poms for testing-sqash version

commit dbbfb7b4740b7c38fee7182a8d5c08e01ff5b410
Author: Vincent Latombe <vincent@latombe.net>
Date:   Thu Jul 18 06:51:25 2013 +0200

	Disable rebase

commit b614427237fcab31b3417cbf47d46eb122073c23
Author: Vincent Latombe <vincent@latombe.net>
Date:   Thu Jul 18 06:48:25 2013 +0200

	updating poms for testing-sqash version

commit 5f876e9c5af4b9bcf99d6067bad41431ce0fb5af
Author: Vincent Latombe <vincent@latombe.net>
Date:   Thu Jul 18 06:47:48 2013 +0200

	updating poms for testing-sqash version

commit da1dcd353e07c48999f80fb7c583bab7aadd5325
Author: Vincent Latombe <vincent@latombe.net>
Date:   Thu Jul 18 06:47:35 2013 +0200

	Enabling rebase and squash

commit 36ab5e0f3dd0b86d991a32f70552613f7e8aa05b
Author: Vincent Latombe <vincent@latombe.net>
Date:   Thu Jul 18 06:46:17 2013 +0200

	updating poms for testingSqash branch

commit 5d9e3a7819e848ffea27f74a39d92bcb54b6d64b
Author: Vincent Latombe <vincent@latombe.net>
Date:   Thu Jul 18 06:46:17 2013 +0200

	updating poms for testing-sqash version

--- a/pom.xml
+++ b/pom.xml
@@ -26,17 +26,30 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
-	
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>com.atlassian.maven.plugins</groupId>
+				<artifactId>maven-jgitflow-plugin</artifactId>
+				<version>1.0-alpha8</version>
+				<configuration>
+					<squash>true</squash>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+
 	<distributionManagement>
-    <repository>
-      <id>local-repo</id>
-      <name>Local repository</name>
-      <url>file://localrepo</url>
-    </repository>
+		<repository>
+			<id>local-repo</id>
+			<name>Local repository</name>
+			<url>file://localrepo</url>
+		</repository>
 		<snapshotRepository>
-      <id>local-repo</id>
-      <name>Local repository</name>
-      <url>file://localrepo</url>
-    </snapshotRepository>
-  </distributionManagement>
+			<id>local-repo</id>
+			<name>Local repository</name>
+			<url>file://localrepo</url>
+		</snapshotRepository>
+	</distributionManagement>
 </project>
