Squashed commit of the following:
commit fd084ea97dd2bcb9c799ebdb53ce5967e2a19a42
Author: Vincent Latombe <vincent@latombe.net>
Date:   Fri Jul 19 06:31:19 2013 +0200

	updating poms for 1.1 release

commit 8fcdde2f9ba75d5cd9f2723e29c71c1c6a672b94
Author: Vincent Latombe <vincent@latombe.net>
Date:   Fri Jul 19 06:31:19 2013 +0200

	updating poms for 1.1 release

commit 5b94ad6967f21eedd056691ce726b4b5c6e02a31
Author: Vincent Latombe <vincent@latombe.net>
Date:   Fri Jul 19 06:31:11 2013 +0200

	updating poms for 1.1 release

--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
 	<groupId>net.latombe</groupId>
 	<artifactId>testing-gitflow</artifactId>
-	<version>1.1-SNAPSHOT</version>
+	<version>1.1</version>
 	<packaging>jar</packaging>
 
 	<name>testing-gitflow</name>
@@ -11,7 +11,7 @@
 	<scm>
 		<connection>scm:git:D:/git_bare/testing-gitflow.git</connection>
 		<developerConnection>scm:git:D:/git_bare/testing-gitflow.git</developerConnection>
-		<tag>HEAD</tag>
+		<tag>1.1</tag>
 	</scm>
 
 	<properties>
